--- a/config/lpgalaxy_blank_slate.conf
+++ b/config/lpgalaxy_blank_slate.conf
@@ -1,2 +1,6 @@
 # Comment out to disable soft-off, or if using a different branch without soft-off support
 CONFIG_ZMK_PM_SOFT_OFF=y
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+CONFIG_ZMK_KEYBOARD_NAME="Blankslate"
+CONFIG_ZMK_STUDIO=y
